pub_sub_ws/log/build_2025-04-07_20-00-02/pub_sub_pkg/stdout_stderr.log
-- Found ament_cmake: 2.5.3 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 28.1.6 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.1 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.1 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found std_msgs: 5.3.5 (/opt/ros/jazzy/share/std_msgs/cmake)
-- Found ament_lint_auto: 0.17.1 (/opt/ros/jazzy/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/build/pub_sub_pkg
[ 50%] Building CXX object CMakeFiles/rpm_pub.dir/src/rpm_pub.cpp.o
[ 50%] Building CXX object CMakeFiles/speed_calc.dir/src/speed_calc.cpp.o
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp: In constructor ‘SpeedCalcNode::SpeedCalcNode()’:
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp:9:13: error: ‘rpm_subscription_’ was not declared in this scope; did you mean ‘rmw_subscription_t’?
    9 |             rpm_subscription_ = this->create_subscription<std_msgs::msg::Float64>(
      |             ^~~~~~~~~~~~~~~~~
      |             rmw_subscription_t
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp:11:13: error: expected unqualified-id before ‘)’ token
   11 |             );
      |             ^
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/rpm_pub.cpp: In constructor ‘RpmPubNode::RpmPubNode()’:
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/rpm_pub.cpp:14:20: error: invalid operands of types ‘<unresolved overloaded function type>’ and ‘const char [27]’ to binary ‘operator<<’
   14 |         std::count << "RPM Publisher Node Running" << std:endl;
      |         ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/rpm_pub.cpp:14:58: error: found ‘:’ in nested-name-specifier, expected ‘::’
   14 |         std::count << "RPM Publisher Node Running" << std:endl;
      |                                                          ^
      |                                                          ::
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp:12:13: error: ‘speed_publisher_’ was not declared in this scope
   12 |             speed_publisher_ = this->create_publisher<std_msgs::msg::Float64>("speed", 10); //initialization of var
      |             ^~~~~~~~~~~~~~~~
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp: In member function ‘void SpeedCalcNode::calculate_and_pub_speed(const std_msgs::msg::Float64&) const’:
/home/ubuntu/ROS2/ros_workspace_name/pub_sub_ws/src/pub_sub_pkg/src/speed_calc.cpp:19:13: error: ‘speed_publisher_’ was not declared in this scope
   19 |             speed_publisher_->publisher(speed_msg);
      |             ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/speed_calc.dir/build.make:76: CMakeFiles/speed_calc.dir/src/speed_calc.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/speed_calc.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/rpm_pub.dir/build.make:76: CMakeFiles/rpm_pub.dir/src/rpm_pub.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/rpm_pub.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
